Added result preview

--- a/power/src/app/fragebogen/editor/editor.component.html
+++ b/power/src/app/fragebogen/editor/editor.component.html
@@ -99,7 +99,7 @@
                 <button type="button"
                     class="btn btn-secondary mr-2"
                     title="Formular Vorschau öffnen"
-                    (click)="preview.Toggle()">
+                    (click)="preview.Open()">
                     <i class="fas fa-expand fa-fw" aria-hidden="true"></i>
                     <span class="sr-only">Formular Vorschau öffnen</span>
                 </button>
