Added first tests for details module

--- a/power/src/app/fragebogen/details/maketask/maketask.component.html
+++ b/power/src/app/fragebogen/details/maketask/maketask.component.html
@@ -11,7 +11,7 @@
                 </div>
 
                 <!-- modal close button -->
-                <button type="button" class="close" title="Schließen" data-dismiss="modal" aria-label="Schließen" (click)="Close()">
+                <button type="button" class="close" title="Schließen" data-dismiss="modal" aria-label="Schließen" (click)="close()">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
