--- a/power/src/app/fragebogen/dashboard/newform/newform.component.html
+++ b/power/src/app/fragebogen/dashboard/newform/newform.component.html
@@ -3,16 +3,24 @@
         <div class="modal-content">
             <!-- modal head -->
             <div class="modal-header">
-                <h4 class="modal-title pull-left">Neues Formular</h4>
+                <div class="modal-title h4 pull-left">
+                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-file-earmark-medical align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                        <path d="M4 1h5v1H4a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V6h1v7a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2z"/>
+                        <path d="M9 4.5V1l5 5h-3.5A1.5 1.5 0 0 1 9 4.5z"/>
+                        <path fill-rule="evenodd" d="M7 4a.5.5 0 0 1 .5.5v.634l.549-.317a.5.5 0 1 1 .5.866L8 6l.549.317a.5.5 0 1 1-.5.866L7.5 6.866V7.5a.5.5 0 0 1-1 0v-.634l-.549.317a.5.5 0 1 1-.5-.866L6 6l-.549-.317a.5.5 0 0 1 .5-.866l.549.317V4.5A.5.5 0 0 1 7 4zM5 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
+                    </svg>
+                    Neues Formular
+                </div>
 
                 <!-- modal close button -->
-                <button type="button" class="close" title="Schließen" data-dismiss="modal" aria-label="Schließen" (click)="Close()">
+                <button type="button" class="close" title="Schließen" data-dismiss="modal" aria-label="Schließen" (click)="close()">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
 
             <!-- modal body -->
             <div class="modal-body">
+                <!-- generate form -->
                 <form #newForm="ngForm" onsubmit="return false;">
                     <!-- title -->
                     <div class="form-group">
@@ -26,16 +34,6 @@
                             maxlength="200"
                             placeholder="Mein Formular"
                             required>
-                    </div>
-
-                    <!-- public -->
-                    <div class="custom-control custom-checkbox mb-3">
-                        <input type="checkbox"
-                            class="custom-control-input"
-                            [(ngModel)]="public"
-                            id="formpublic"
-                            name="formpublic" disabled>
-                        <label class="custom-control-label" for="formpublic">Formular ist öffentlich</label>
                     </div>
 
                     <!-- service -->
