--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -5,12 +5,12 @@
   </h5>
   <div class="card-body">
     <dl class="row">
-      <dt class="col-md-5">Art der Nutzung</dt>
-      <dd class="col-md-7">{{feature.properties.nutzung | nutzung}}</dd>
-      <dt class="col-md-5">Bodenrichtwert</dt>
+      <dt class="col-md-5">{{'Art der Nutzung' | hyphenate}}</dt>
+      <dd class="col-md-7">{{feature.properties.nutzung | nutzung | hyphenate}}</dd>
+      <dt class="col-md-5">{{'Bodenrichtwert' | hyphenate}}</dt>
       <dd class="col-md-7">{{feature.properties.brw}} &euro; / m&#178;</dd>
-      <dt class="col-md-5" *ngIf="feature.properties.beit">Beitragsabgabenrechtlicher Zustand</dt>
-      <dd class="col-md-7" *ngIf="feature.properties.beit">{{feature.properties.beit | beitrag }}</dd>
+      <dt class="col-md-5" *ngIf="feature.properties.beit">{{'Beitragsabgabenrechtlicher Zustand' | hyphenate}}</dt>
+      <dd class="col-md-7" *ngIf="feature.properties.beit">{{feature.properties.beit | beitrag | hyphenate}}</dd>
     </dl>
   </div>
 </div>
