--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -45,7 +45,7 @@
             <li><a class="text-muted" href="https://www.lgln.niedersachsen.de/startseite/wir_uber_uns_amp_organisation/datenschutz/datenschutz-im-lgln-138166.html">Datenschutz</a></li>
             <li><a class="text-muted" href="https://www.lgln.niedersachsen.de/startseite/wir_uber_uns_amp_organisation/allgemeine_geschafts_und_nutzungsbedingungen_agnb/allgemeine-geschafts-und-nutzungsbedingungen-agnb-97401.html">Allgemeine Geschäfts- <br>und Nutzungsbedingungen</a></li>
           </ul>
-          <p class="text-muted">Version: {{ appVersion }}</p>
+          <p class="text-muted">Version: {{ appVersion.branch }}/{{ appVersion.version }}</p>
         </div>
       </div>
     </footer>
