--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -29,6 +29,12 @@
         <li class="nav-item" *ngIf="config.modules.includes('fragebogen')">
           <a class="nav-link" (click)="isCollapsed=!isCollapsed" routerLink="/forms" routerLinkActive="active">Formulare</a>
         </li>
+        <li class="nav-item" *ngIf="!auth.getUser()">
+          <a class="nav-link" (click)="isCollapsed=!isCollapsed" routerLink="/login" routerLinkActive="active">Einloggen</a>
+        </li>
+        <li class="nav-item" *ngIf="auth.getUser()">
+          <a class="nav-link" (click)="isCollapsed=!isCollapsed" routerLink="/logout" routerLinkActive="active">Ausloggen</a>
+        </li>
       </ul>
     </div>
   </nav>
