Fix wrong angular links

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid p-0">
   <nav class="navbar navbar-light navbar-expand-md border-bottom bg-white fixed-top">
-    <a class="navbar-brand" href="#" style="color: #343a40;">
+    <a class="navbar-brand" [routerLink]="['/']" style="color: #343a40;">
       <img src="/assets/logos/logo.png" height="20" class="mr-2 align-top" alt="LGLN Logo">
       <strong class="d-none d-md-inline">
         <span>Portal für Wertermittlung</span>
@@ -18,22 +18,22 @@
     <div class="collapse navbar-collapse" style="z-index: 2000;" [ngbCollapse]="isCollapsed">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item" *ngIf="config.modules.includes('bodenrichtwerte')">
-          <a class="nav-link" (click)="isCollapsed=!isCollapsed" routerLink="/bodenrichtwerte" routerLinkActive="active">Bodenrichtwerte</a>
+          <a class="nav-link" (click)="isCollapsed=!isCollapsed" [routerLink]="['/bodenrichtwerte']" routerLinkActive="active">Bodenrichtwerte</a>
         </li>
         <li class="nav-item" *ngIf="config.modules.includes('bodenwerte')">
-          <a class="nav-link" (click)="isCollapsed=!isCollapsed" routerLink="/bodenwertkalkulator" routerLinkActive="active">Bodenwerte</a>
+          <a class="nav-link" (click)="isCollapsed=!isCollapsed" [routerLink]="['/bodenwertkalkulator']" routerLinkActive="active">Bodenwerte</a>
         </li>
         <li class="nav-item" *ngIf="config.modules.includes('immobilien')">
-          <a class="nav-link" (click)="isCollapsed=!isCollapsed" routerLink="/immobilienpreisindex" routerLinkActive="active">Immobilien</a>
+          <a class="nav-link" (click)="isCollapsed=!isCollapsed" [routerLink]="['/immobilienpreisindex']" routerLinkActive="active">Immobilien</a>
         </li>
         <li class="nav-item" *ngIf="config.modules.includes('fragebogen')">
-          <a class="nav-link" (click)="isCollapsed=!isCollapsed" routerLink="/forms" routerLinkActive="active">Formulare</a>
+          <a class="nav-link" (click)="isCollapsed=!isCollapsed" [routerLink]="['/forms']" routerLinkActive="active">Formulare</a>
         </li>
         <li class="nav-item" *ngIf="!auth.getUser()">
-          <a class="nav-link" (click)="isCollapsed=!isCollapsed" routerLink="/login" routerLinkActive="active">Einloggen</a>
+          <a class="nav-link" (click)="isCollapsed=!isCollapsed" [routerLink]="['/login']" routerLinkActive="active">Einloggen</a>
         </li>
         <li class="nav-item" *ngIf="auth.getUser()">
-          <a class="nav-link" (click)="isCollapsed=!isCollapsed" routerLink="/logout" routerLinkActive="active">Ausloggen</a>
+          <a class="nav-link" (click)="isCollapsed=!isCollapsed" [routerLink]="['/logout']" routerLinkActive="active">Ausloggen</a>
         </li>
       </ul>
     </div>
