--- a/power/src/app/static/login/login.component.html
+++ b/power/src/app/static/login/login.component.html
@@ -1,59 +1,1 @@
-<!-- login page -->
-<main class="container mainpage p-1 p-lg-3" id="content" tabindex="-1">
-    <div class="card bg-light mb-3">
-        <div class="card-header h5">
-            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-fill align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-            </svg>
-            Login
-        </div>
-
-        <div class="card-body">
-            <!-- login formular -->
-            <form #loginForm="ngForm" (ngSubmit)="login()" action="#">
-                <div class="form-group">
-                    <!-- email -->
-                    <label for="useremail">
-                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-envelope-fill align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                            <path fill-rule="evenodd" d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
-                        </svg>
-                        E-Mail Adresse
-                    </label>
-                    <input type="email"
-                           class="form-control"
-                           [(ngModel)]="email"
-                           id="useremail"
-                           name="useremail"
-                           maxlength="200"
-                           placeholder="E-Mail"
-                           required>
-                </div>
-
-                <!-- password -->
-                <div class="form-group mb-0">
-                    <label for="userpassword">
-                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-lock-fill align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                            <path d="M2.5 9a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-7a2 2 0 0 1-2-2V9z"/>
-                            <path fill-rule="evenodd" d="M4.5 4a3.5 3.5 0 1 1 7 0v3h-1V4a2.5 2.5 0 0 0-5 0v3h-1V4z"/>
-                        </svg>
-                        Passwort
-                    </label>
-                    <input type="password"
-                           class="form-control"
-                           [(ngModel)]="password"
-                           id="userpassword"
-                           name="userpassword"
-                           maxlength="200"
-                           placeholder="Passwort"
-                           required>
-                </div>
-
-                <button type="submit" class="btn btn-success sr-only" title="Einloggen">Einloggen</button>
-            </form>
-        </div>
-
-        <div class="card-footer text-muted">
-            <button type="button" class="btn btn-success" title="Einloggen" (click)="login()">Einloggen</button>
-        </div>
-    </div>
-</main>
+<p>Sie werden in kürze weitergeleitet...</p>
