Feedback functionality fixes

--- a/power/src/app/static/feedback/feedback.component.html
+++ b/power/src/app/static/feedback/feedback.component.html
@@ -10,13 +10,12 @@
     <li>Bei Fehlern: Versionsnummer (siehe Fußzeile)</li>
   </ul>
   <p class="lead">Dieser Button öffnet Ihr E-Mail-Programm:</p>
-  <a type="button"
-     class="btn btn-primary"
-     href="mailto:incoming++lgln-power-ni-power-frontend-17688796-issue-@@incoming..gitlab.com">
+  <a type="button" class="btn btn-primary"
+     href="mailto:incoming+lgln-power-ni-power-frontend-17688796-issue-@incoming.gitlab.com">
     Rückmeldung geben
   </a>
   <br><br>
   <p>Der Empfänger ist bereits ausgefüllt.</p>
   <p>Falls sich Ihr E-Mail-Programm nicht öffnet, senden Sie die E-Mail bitte an:</p>
-  <pre id="mail">incoming++lgln-power-ni-power-frontend-17688796-issue-@@incoming.gitlab.com</pre>
+  <code>incoming+lgln-power-ni-power-frontend-17688796-issue-@incoming.gitlab.com</code>
 </div>
