--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -35,6 +35,9 @@
         <li class="nav-item" *ngIf="auth.getUser()">
           <a class="nav-link" (click)="isCollapsed=!isCollapsed" [routerLink]="['/logout']" routerLinkActive="active">Ausloggen</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" (click)="isCollapsed=!isCollapsed" [routerLink]="['/feedback']" routerLinkActive="active">Rückmeldung</a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -46,7 +49,6 @@
       <div class="row justify-content-around">
         <div class="col-md-4 text-center">
           <h5>Informationen</h5>
-          <p><a (click)="isCollapsed=!isCollapsed" routerLink="/feedback" routerLinkActive="active">Rückmeldung geben</a></p>
           <ul class="list-unstyled text-small">
             <li><a href="https://www.lgln.niedersachsen.de/startseite/wir_uber_uns_amp_organisation/impressum/impressum-92629.html">Impressum</a></li>
             <li><a href="https://www.lgln.niedersachsen.de/startseite/wir_uber_uns_amp_organisation/datenschutz/datenschutz-im-lgln-138166.html">Datenschutz</a></li>
