--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -30,7 +30,7 @@
           <a class="nav-link" (click)="isCollapsed=!isCollapsed" [routerLink]="['/forms']" routerLinkActive="active">Formulare</a>
         </li>
         <li class="nav-item" *ngIf="!auth.getUser()">
-          <a class="nav-link" (click)="isCollapsed=!isCollapsed" [routerLink]="['/login']" routerLinkActive="active">Einloggen</a>
+          <a class="nav-link" (click)="isCollapsed=!isCollapsed" [routerLink]="['/login']" [queryParams]="{redirect: uri.pathname}" routerLinkActive="active">Einloggen</a>
         </li>
         <li class="nav-item" *ngIf="auth.getUser()">
           <a class="nav-link" (click)="isCollapsed=!isCollapsed" [routerLink]="['/logout']" routerLinkActive="active">Ausloggen</a>
