--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -1,14 +1,15 @@
 <div class="position-relative overflow-hidden p-3 p-md-5 h-50 text-center">
-  <div class="col-md-5 p-lg-5 mx-auto my-5 headline">
+  <div class="col-lg-5 p-lg-5 mx-auto my-5 headline">
     <h2>Bodenrichtwerte</h2>
     <p class="lead">für Bauland und landwirtschaftliche Nutzflächen für das gesamte Land Niedersachsen</p>
     <a class="btn btn-danger" [routerLink]="['/bodenrichtwerte']">Zur Anwendung</a>
   </div>
-  <div class="product-device shadow-sm d-none d-md-block"></div>
-  <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+  <div class="bg-dark shadow-sm mx-auto d-lg-inline d-xl-none" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+  <div class="product-device shadow-sm d-none d-lg-block"></div>
+  <div class="product-device product-device-2 shadow-sm d-none d-lg-block"></div>
 </div>
 
-<div class="d-md-flex flex-md-equal w-0 h-50">
+<div class="d-lg-flex flex-md-equal w-0 h-50">
   <div class="pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
     <div class="my-3 py-3">
       <h2 class="font-weight-normal">Immobilienpreis-Index</h2>
