--- a/power/src/app/immobilien/immobilien/immobilien.component.html
+++ b/power/src/app/immobilien/immobilien/immobilien.component.html
@@ -1,13 +1,13 @@
-<div class="row mh-100" [ngClass]="{'rowrtl': layoutRtl == true}">
+<div class="row mh-100" [ngClass]="{'rowrtl': nipixStatic.layoutRtl == true}">
     <div class="col-sm-8">
-        <div echarts [options]="options" [loading]="!mapLoaded" (chartInit)="onChartInit($event)" (chartMapSelectChanged)="onMapSelectChange($event)" class="demo-chart chart-map"></div>
-        <div echarts [options]="chartOption" (chartInit)="onChartChartInit($event)" (chartDataZoom)="onDataZoom($event)" (chartClick)="chartClicked($event)" (chartFinished)="onChartFinished($event)" class="demo-chart chart-graph"></div>
-        <div style="text-align: center;" [ngStyle]="{'font-size': fontSizePage+'rem'}">HINWEIS: Das Basisjahr der Indexreihenberechung richtet sich nach der unteren Auswahl und lässt sich mit den Reglern dynamisch anpassen. </div>
+        <div echarts [options]="this.nipixRuntime.map.options" [loading]="!mapLoaded" (chartInit)="onChartInit($event)" (chartMapSelectChanged)="onMapSelectChange($event)" class="demo-chart chart-map"></div>
+        <div echarts [options]="this.nipixRuntime.chart.options" (chartInit)="onChartChartInit($event)" (chartDataZoom)="onDataZoom($event)" (chartClick)="chartClicked($event)" (chartFinished)="onChartFinished($event)" class="demo-chart chart-graph"></div>
+        <div style="text-align: center;" [ngStyle]="{'font-size': nipixStatic.textOptions.fontSizePage+'rem'}">HINWEIS: Das Basisjahr der Indexreihenberechung richtet sich nach der unteren Auswahl und lässt sich mit den Reglern dynamisch anpassen. </div>
     </div>
     <div class="col-sm-4">
         <ngb-accordion [closeOthers]="true" activeIds="static-0" (panelChange)="onPanelChange($event)" #acc="ngbAccordion">
 
-            <ngb-panel *ngFor="let select of selection; let p = index" id="static-{{p}}">
+            <ngb-panel *ngFor="let select of nipixStatic.data.selections; let p = index" id="static-{{p}}">
                 <ng-template ngbPanelTitle>
                     <i class="fa" [ngClass]="{'fa-plus-circle': staticExpand(p) == false, 'fa-minus-circle': staticExpand(p) == true}" aria-hidden="true"></i>
                     {{select['name']}}
@@ -17,11 +17,11 @@
                     <!-- NiPix Category Selection -->
                     <div ngbDropdown *ngIf="select['type'] == 'single' || select['type'] == 'multiIndex'" class="d-inline-block btn-block ">
                         <button class="btn btn-block shadow-sm bg-white" id="dropdownBasic2-{{p}}" ngbDropdownToggle>
-                            <i class="fa" [ngClass]="iconFor[getDraw(select['preset'][0]).nipixCategory]" aria-hidden="true"></i>
-                            {{getDraw(select['preset'][0]).nipixCategory}}
+                            <i class="fa" [ngClass]="iconFor[nipixRuntime.getDrawPreset(select['preset'][0]).nipixCategory]" aria-hidden="true"></i>
+                            {{nipixRuntime.getDrawPreset(select['preset'][0]).nipixCategory}}
                         </button>
                         <div ngbDropdownMenu aria-labelledby="dropdownBasic2-p" class="dropdown-menu">
-                            <button class="dropdown-item" *ngFor="let f of nicat" (click)="onChangeCat(select['preset'],f)">
+                            <button class="dropdown-item" *ngFor="let f of nipixRuntime.availableNipixCategories" (click)="onChangeCat(select['preset'],f)">
                                 <i class="fa" [ngClass]="iconFor[f]" aria-hidden="true"></i>
                                 {{f}}
                             </button>
@@ -45,26 +45,26 @@
 
                         <li *ngIf="select['type'] == 'multiSelect'">
                             <ng-container *ngFor="let itm of select['preset']; let i = index">
-                                <span class="check" [style.background-color]="getCustomColor(itm)" style="padding-bottom: 0.5rem;" (click)="toggleNipixCategory(itm)" *ngIf="getDraw(itm).show">
-                                    <i class="fa fa-home" [ngClass]="fa-home" aria-hidden="true" *ngIf="getDraw(itm)['nipixCategory'] == 'gebrauchte Eigenheime'"></i>
-                                    <i class="fa fa-building" [ngClass]="fa-home" aria-hidden="true" *ngIf="getDraw(itm)['nipixCategory'] == 'gebrauchte Eigentumswohnungen'"></i>
+                                <span class="check" [style.background-color]="getCustomColor(itm)" style="padding-bottom: 0.5rem;" (click)="toggleNipixCategory(itm)" *ngIf="nipixRuntime.getDrawPreset(itm).show">
+                                    <i class="fa fa-home" [ngClass]="fa-home" aria-hidden="true" *ngIf="nipixRuntime.getDrawPreset(itm)['nipixCategory'] == 'gebrauchte Eigenheime'"></i>
+                                    <i class="fa fa-building" [ngClass]="fa-home" aria-hidden="true" *ngIf="nipixRuntime.getDrawPreset(itm)['nipixCategory'] == 'gebrauchte Eigentumswohnungen'"></i>
                                 </span>
                             </ng-container>
-                            <span *ngFor="let f of nicat">
+                            <span *ngFor="let f of nipixRuntime.availableNipixCategories">
                                 <i class="fa" [ngClass]="iconFor[f]" aria-hidden="true"></i> {{f}}
                             </span>
                         </li>
 
                         <li>
                             <ng-container *ngFor="let itm of select['preset']; let i = index">
-                                <ng-container *ngIf="getDraw(itm).show">
+                                <ng-container *ngIf="nipixRuntime.getDrawPreset(itm).show">
                                     <span class="check" [style.background-color]="getCustomColor(itm)" style="padding-bottom: 0.5rem;">
-                                        <input id="{{i}}vall" [checked]="getDraw(itm).values.length == 0" type="checkbox" (click)="toggleAllSelect(itm)">
+                                        <input id="{{i}}vall" [checked]="nipixRuntime.getDrawPreset(itm).values.length == 0" type="checkbox" (click)="toggleAllSelect(itm)">
                                         <label for="{{i}}vall" style="margin-bottom: 0;">
                                         </label>
                                     </span>
-                                    <span *ngIf="select['type'] == 'single' && getDraw(itm).values.length == 0">alle auswählen</span>
-                                    <span *ngIf="select['type'] == 'single' && getDraw(itm).values.length > 0">Auswahl aufheben</span>
+                                    <span *ngIf="select['type'] == 'single' && nipixRuntime.getDrawPreset(itm).values.length == 0">alle auswählen</span>
+                                    <span *ngIf="select['type'] == 'single' && nipixRuntime.getDrawPreset(itm).values.length > 0">Auswahl aufheben</span>
                                 </ng-container>
                             </ng-container>
                             <ng-container *ngIf="select['type'] == 'multiSelect'">
@@ -73,11 +73,11 @@
 
                         </li>
 
-                        <li *ngFor="let subitem of allItems">
+                        <li *ngFor="let subitem of nipixStatic.data.allItems">
                             <ng-container *ngFor="let itm of select['preset']; let i = index">
 
-                                <span class="check" [style.background-color]="getCustomColor(itm)" *ngIf="getDraw(itm).show">
-                                    <input id="{{i}}v1{{subitem}}" [checked]="getDraw(itm).values.includes(subitem)" type="checkbox" (click)="toggleMapSelect(itm, subitem, select['type'])">
+                                <span class="check" [style.background-color]="getCustomColor(itm)" *ngIf="nipixRuntime.getDrawPreset(itm).show">
+                                    <input id="{{i}}v1{{subitem}}" [checked]="nipixRuntime.getDrawPreset(itm).values.includes(subitem)" type="checkbox" (click)="toggleMapSelect(itm, subitem, select['type'])">
                                     <label for="{{i}}v1{{subitem}}" style="margin-bottom: 0;"></label>
                                 </span>
                             </ng-container>
@@ -89,14 +89,14 @@
                     <!-- Select DrawShow -->
                     <ul *ngIf="select['type'] == 'multi' || select['type'] == 'multiIndex'">
                         <li *ngFor="let itm of select['preset']">
-                            <input id="{{itm}}" type="checkbox" [checked]="getDraw(itm).show" (change)="onToggleDrawRoot(itm)">
+                            <input id="{{itm}}" type="checkbox" [checked]="nipixRuntime.getDrawPreset(itm).show" (change)="onToggleDrawRoot(itm)">
                             <label for="{{itm}}"></label>
                             <span (click)="onClickDrawRoot(itm)">
-                                <span style="display: inline-block; margin-right: 5px; border-radius: 10px; width: 10px; height: 10px;" [style.background-color]="getDraw(itm).colors"></span>
+                                <span style="display: inline-block; margin-right: 5px; border-radius: 10px; width: 10px; height: 10px;" [style.background-color]="nipixRuntime.getDrawPreset(itm).colors"></span>
                                 {{ itm }}
                                 <i class="fa fa-home" [ngClass]="fa-home" aria-hidden="true" *ngIf="itm == 'Eigenheime'"></i>
                                 <i class="fa fa-building" [ngClass]="fa-home" aria-hidden="true" *ngIf="itm == 'Eigentumswohnungen'"></i>
-                                ({{ shortNames[itm] }})</span>
+                                ({{ nipixStatic.data.shortNames[itm] }})</span>
                         </li>
                     </ul>
 
@@ -122,14 +122,14 @@
                            #searchWoMaReg="ngbTypeahead"
                            />
                     <hr>
-                    Ihre Wohnungsmarkregion: {{ regionName(gemeinden[model]) | json }}
+                    Ihre Wohnungsmarkregion: {{ regionName(nipixStatic.data.gemeinden[model]) | json }}
 
                 </ng-template>
             </ngb-panel>
 
         </ngb-accordion>
         <div style="text-align: center; margin-top: 1rem;">
-            Es gelten die <a href="{{agnbUrl}}" target="_blank">Allgemeine Geschäfts- und Nutzungsbedingungen (AGNB)</a>
+            Es gelten die <a href="{{nipixStatic.agnbUrl}}" target="_blank">Allgemeine Geschäfts- und Nutzungsbedingungen (AGNB)</a>
         </div>
     </div>
 </div>
