--- a/power/src/app/static/feedback/feedback.component.html
+++ b/power/src/app/static/feedback/feedback.component.html
@@ -1,5 +1,5 @@
 <div class="p-4 text-center">
-  <h2>Rückmeldung geben</h2>
+  <h2>Feedback geben</h2>
   <p class="lead">Sie haben ein Problem? Oder wollen einen Vorschlag machen?</p>
   <p class="lead">Bitte formulieren Sie ihr Anliegen so exakt wie möglich:</p>
   <ul>
@@ -12,7 +12,7 @@
   <p class="lead">Dieser Button öffnet Ihr E-Mail-Programm:</p>
   <a type="button" class="btn btn-primary"
      href="mailto:incoming+lgln-power-ni-power-frontend-17688796-issue-@incoming.gitlab.com">
-    Rückmeldung geben
+    Feedback geben
   </a>
   <br><br>
   <p>Der Empfänger ist bereits ausgefüllt.</p>
