--- a/power/src/app/fragebogen/details/details.component.html
+++ b/power/src/app/fragebogen/details/details.component.html
@@ -10,7 +10,7 @@
         {{ storage.form.title }}
 
         <button type="button"
-            class="btn btn-secondary btn-sm float-right"
+            class="btn btn-secondary btn-sm float-right d-none d-md-inline"
             title="Zurück zum Dashboard"
             [routerLink]="['/forms/dashboard']">
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-backspace align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
