--- a/power/src/styles.scss
+++ b/power/src/styles.scss
@@ -1,10 +1,10 @@
 /*!* You can add global styles to this file, and also import other style files *!*/
 /*// @import "theme.scss";*/
 @import "~bootstrap/scss/bootstrap.scss";
-@import "webfonts/fontawesome.css";
-@import "~surveyjs-widgets/node_modules/nouislider/distribute/nouislider.css";
+@import "~nouislider/distribute/nouislider.css";
 @import "~mapbox-gl/dist/mapbox-gl.css";
-@import "app/fragebogen/fragebogen.css";
+@import "webfonts/fontawesome.css";
+@import "app/fragebogen/fragebogen.scss";
 
 @mixin font($font-family, $font-file) {
   @font-face {
