--- a/power/src/app/fragebogen/editor/editor.component.html
+++ b/power/src/app/fragebogen/editor/editor.component.html
@@ -56,8 +56,8 @@
                             </li>
                         </smooth-dnd-container>
 
-                        <li class="page-item clickable text-success">
-                            <a class="page-link" (click)="wsPageCreate(storage.selectedPageID)" title="Neue Seite hinzufügen">
+                        <li class="page-item clickable">
+                            <a class="page-link text-success" (click)="wsPageCreate(storage.selectedPageID)" title="Neue Seite hinzufügen">
                                 <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-file-earmark-plus align-bottom" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                                     <path d="M9 1H4a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h5v-1H4a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1h5v2.5A1.5 1.5 0 0 0 10.5 6H13v2h1V6L9 1z"/>
                                     <path fill-rule="evenodd" d="M13.5 10a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1H13v-1.5a.5.5 0 0 1 .5-.5z"/>
@@ -66,8 +66,8 @@
                                 <span class="sr-only">Neue Seite hinzufügen</span>
                             </a>
                         </li>
-                        <li class="page-item clickable text-danger">
-                            <a class="page-link" (click)="wsPageDelete(storage.selectedPageID)" title="Ausgewählte Seite löschen">
+                        <li class="page-item clickable">
+                            <a class="page-link text-danger" (click)="wsPageDelete(storage.selectedPageID)" title="Ausgewählte Seite löschen">
                                 <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash-fill align-bottom" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                                     <path fill-rule="evenodd" d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z"/>
                                 </svg>
