Bodenwert-Kalkulator Refactoring

--- a/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
+++ b/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
@@ -13,13 +13,13 @@
         </div>
         <div class="nav">
           <a class="nav-link">
-            <img src="/assets/icons/geo.svg" width="25" height="25" style="font-size: 25px; vertical-align: middle;">
+            <img src="/assets/icons/geo.svg" width="25" height="25" alt="Ortung">
           </a>
           <a class="nav-link" (click)="toggle3dView()">
-            <img src="/assets/icons/building.svg" width="25" height="25" style="font-size: 25px; vertical-align: middle;">
+            <img src="/assets/icons/building.svg" width="25" height="25" alt="3D aktivieren/deaktivieren">
           </a>
           <a class="nav-link">
-            <img src="/assets/icons/arrows-fullscreen.svg" width="25" height="25" style="font-size: 25px; vertical-align: middle;">
+            <img src="/assets/icons/arrows-fullscreen.svg" width="25" height="25" alt="Karte zurücksetzen">
           </a>
         </div>
       </nav>
@@ -32,21 +32,21 @@
       <nav class="nav nav-underline">
         <div class="nav mr-auto">
           <a class="nav-link">
-            <img src="/assets/icons/filter.svg" width="25" height="25" style="font-size: 25px; vertical-align: middle;">
+            <img src="/assets/icons/filter.svg" width="25" height="25" alt="Filtern">
           </a>
         </div>
         <div class="nav ml-auto">
           <a class="nav-link" (click)="toggleSearchActive()">
-            <img src="/assets/icons/search.svg" width="25" height="25" style="font-size: 25px; vertical-align: middle;">
+            <img src="/assets/icons/search.svg" width="25" height="25" alt="Suche">
           </a>
           <a class="nav-link">
-            <img src="/assets/icons/geo.svg" width="25" height="25" style="font-size: 25px; vertical-align: middle;">
+            <img src="/assets/icons/geo.svg" width="25" height="25" alt="Ortung">
           </a>
           <a class="nav-link" (click)="toggle3dView()">
-            <img src="/assets/icons/building.svg" width="25" height="25" style="font-size: 25px; vertical-align: middle;">
+            <img src="/assets/icons/building.svg" width="25" height="25" alt="3D aktivieren/deaktivieren">
           </a>
           <a class="nav-link">
-            <img src="/assets/icons/arrows-fullscreen.svg" width="25" height="25" style="font-size: 25px; vertical-align: middle;">
+            <img src="/assets/icons/arrows-fullscreen.svg" width="25" height="25" alt="Karte zurücksetzen">
           </a>
         </div>
       </nav>
