--- a/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.scss
+++ b/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.scss
@@ -70,3 +70,8 @@
 ngb-accordion /deep/ .card /deep/ .card-header {
   background-color: white !important;
 }
+
+a.nav-link img {
+  font-size: 25px;
+  vertical-align: middle;
+}
