--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -6,17 +6,17 @@
       <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-list-ul align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
         <path fill-rule="evenodd" d="M5 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm-3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm0 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm0 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
       </svg>
-      Formulare
+      <span i18n>&nbsp;Formulare</span>
     </div>
     <div class="card-body table-responsive p-0">
       <table class="table table-hover m-0">
         <thead>
         <tr>
-          <th scope="col" class="border-top-0">ID</th>
-          <th scope="col" class="border-top-0 w-50">Titel</th>
-          <th scope="col" class="border-top-0">Tags</th>
-          <th scope="col" class="border-top-0">Erstellt</th>
-          <th scope="col" class="border-top-0">Aktualisiert</th>
+          <th scope="col" class="border-top-0" i18n>ID</th>
+          <th scope="col" class="border-top-0 w-50" i18n>Titel</th>
+          <th scope="col" class="border-top-0" i18n>Tags</th>
+          <th scope="col" class="border-top-0" i18n>Erstellt</th>
+          <th scope="col" class="border-top-0" i18n>Aktualisiert</th>
           <th scope="col" class="border-top-0"></th>
         </tr>
         </thead>
@@ -24,7 +24,7 @@
         <tr *ngFor="let form of storage.formsList; index as i">
           <td>{{ form.id }}</td>
           <td scope="row">
-            <a title="Formular öffnen" [routerLink]="['/forms/details', form.id]">
+            <a i18n-title title="Formular öffnen" [routerLink]="['/forms/details', form.id]">
               {{ form.title }}
             </a>
           </td>
@@ -32,29 +32,29 @@
           <td>{{ form.created | date:'dd.MM.yyyy HH:mm' }}</td>
           <td>{{ form.updated | date:'dd.MM.yyyy HH:mm' }}</td>
           <td>
-            <button type="button" class="btn btn-danger btn-sm" id="button-delete" title="Formular löschen"
+            <button type="button" class="btn btn-danger btn-sm" id="button-delete" i18n-title title="Formular löschen"
                     (click)="deleteForm(i)">
               <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash-fill align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                 <path fill-rule="evenodd" d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z"/>
               </svg>
-              Löschen
+              <span i18n>&nbsp;Löschen</span>
             </button>
           </td>
         </tr>
         </tbody>
       </table>
-      <span class="m-3" *ngIf="!storage.formsList.length">Keine Formulare gefunden</span>
+      <span class="m-3" *ngIf="!storage.formsList.length" i18n>Keine Formulare gefunden</span>
     </div>
     <div class="card-footer">
       <button type="button"
               class="btn btn-success btn-sm mr-2"
-              title="Neues Formular erstellen"
+              i18n-title title="Neues Formular erstellen"
               (click)="newform.open()">
         <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-plus align-top" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
           <path fill-rule="evenodd" d="M8 3.5a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5H4a.5.5 0 0 1 0-1h3.5V4a.5.5 0 0 1 .5-.5z"/>
           <path fill-rule="evenodd" d="M7.5 8a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0V8z"/>
         </svg>
-        Neues Formular
+        <span i18n>&nbsp;Neues Formular</span>
       </button>
     </div>
   </div>
