--- a/power/src/app/fragebogen/editor/editor.component.html
+++ b/power/src/app/fragebogen/editor/editor.component.html
@@ -49,7 +49,7 @@
                                 [class.active]="i === storage.selectedPageID">
                                 <a class="page-link"
                                     (click)="wsPageSelect(i)"
-                                    title="Show page {{ i + 1 }}"
+                                    title="Zeige Seite {{ i + 1 }}"
                                     [attr.data-id]="i">
                                     {{ i + 1 }}
                                 </a>
@@ -104,13 +104,13 @@
                 </button>
                 <button type="button"
                     class="btn btn-primary mr-2"
-                    title="Formular Einstellugen öffnen"
+                    title="Formular Einstellungen öffnen"
                     (click)="modalformular.Open()">
                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-sliders align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                         <path fill-rule="evenodd" d="M14 3.5a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0zM11.5 5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3zM7 8.5a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0zM4.5 10a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3zm9.5 3.5a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0zM11.5 15a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
                         <path fill-rule="evenodd" d="M9.5 4H0V3h9.5v1zM16 4h-2.5V3H16v1zM9.5 14H0v-1h9.5v1zm6.5 0h-2.5v-1H16v1zM6.5 9H16V8H6.5v1zM0 9h2.5V8H0v1z"/>
                     </svg>
-                    <span class="sr-only">Formular Einstellugen öffnen</span>
+                    <span class="sr-only">Formular Einstellungen öffnen</span>
                 </button>
                 <button type="button"
                     class="btn btn-secondary mr-2"
@@ -146,7 +146,7 @@
                         <path fill-rule="evenodd" d="M5.83 5.146a.5.5 0 0 0 0 .708l5 5a.5.5 0 0 0 .707-.708l-5-5a.5.5 0 0 0-.708 0z"/>
                         <path fill-rule="evenodd" d="M11.537 5.146a.5.5 0 0 1 0 .708l-5 5a.5.5 0 0 1-.708-.708l5-5a.5.5 0 0 1 .707 0z"/>
                     </svg>
-                    <span class="sr-only">Zurück</span>
+                    <span class="sr-only">Zurück zu den Details</span>
                 </button>
             </div>
         </div>
@@ -178,13 +178,13 @@
                         <div class="float-sm-right" (click)="$event.stopPropagation()">
                             <button type="button"
                                 class="btn btn-secondary btn-sm mr-2"
-                                title="In Zwischenablage kopieren"
+                                title="Element kopieren"
                                 (click)="wsElementCopy(i)">
                                 <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-clipboard align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                                     <path fill-rule="evenodd" d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/>
                                     <path fill-rule="evenodd" d="M9.5 1h-3a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"/>
                                 </svg>
-                                <span class="sr-only">In Zwischenablage kopieren</span>
+                                <span class="sr-only">Element kopieren</span>
                             </button>
                             <button type="button"
                                 class="btn btn-primary btn-sm mr-2"
@@ -198,12 +198,12 @@
                             </button>
                             <button type="button"
                                 class="btn btn-danger btn-sm"
-                                title="Element Löschen"
+                                title="Element löschen"
                                 (click)="wsElementRemove(i)">
                                 <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash-fill align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                                     <path fill-rule="evenodd" d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z"/>
                                 </svg>
-                                <span class="sr-only">Element Löschen</span>
+                                <span class="sr-only">Element löschen</span>
                             </button>
                         </div>
                     </div>
