--- a/power/src/app/fragebogen/surveyjs/preview/preview.component.html
+++ b/power/src/app/fragebogen/surveyjs/preview/preview.component.html
@@ -1,12 +1,12 @@
 <div class="fullscreen bg-white" *ngIf="isOpen">
     <div class="container p-1 p-lg-3">
-        <button type="button" class="btn btn-secondary mb-3" title="Formular Vorschau schließen" (click)="Close()">
+        <button type="button" class="btn btn-secondary mb-3" i18n-title title="Formular Vorschau schließen" (click)="Close()">
             <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-arrows-collapse align-top" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                 <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8zm6-7a.5.5 0 0 1 .5.5V6a.5.5 0 0 1-1 0V1.5A.5.5 0 0 1 8 1z"/>
                 <path fill-rule="evenodd" d="M10.354 3.646a.5.5 0 0 1 0 .708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 1 1 .708-.708L8 5.293l1.646-1.647a.5.5 0 0 1 .708 0zM8 15a.5.5 0 0 0 .5-.5V10a.5.5 0 0 0-1 0v4.5a.5.5 0 0 0 .5.5z"/>
                 <path fill-rule="evenodd" d="M10.354 12.354a.5.5 0 0 0 0-.708l-2-2a.5.5 0 0 0-.708 0l-2 2a.5.5 0 0 0 .708.708L8 10.707l1.646 1.647a.5.5 0 0 0 .708 0z"/>
             </svg>
-            Vorschau schließen
+            <span i18n>&nbsp;Vorschau schließen</span>
         </button>
         <div *ngIf="form">
             <power-formulars-surveyjs-wrapper [model]="form"
