--- a/power/src/app/shared/alerts/alerts.component.html
+++ b/power/src/app/shared/alerts/alerts.component.html
@@ -2,9 +2,9 @@
 <div id="alert-root" class="container fixed-bottom">
     <div *ngFor="let alert of alerts.alertslist; index as i">
         <alert [type]="alert.type" [dismissOnTimeout]="alert.timeout" (onClosed)="onClosed(i)">
-            <button aria-label="Schließen" title="Schließen" class="close ng-star-inserted" type="button" (click)="onClosed(i)">
+            <button i18n-aria-label aria-label="Schließen" i18n-title title="Schließen" class="close ng-star-inserted" type="button" (click)="onClosed(i)">
                 <span aria-hidden="true">×</span>
-                <span class="sr-only sr-only-focusable">Alert schließen</span>
+                <span class="sr-only sr-only-focusable" i18n>Alert schließen</span>
             </button>
             <span class="h4 alert-heading">
                 <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-info-circle align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
