--- a/power/src/app/shared/loadingscreen/loadingscreen.component.html
+++ b/power/src/app/shared/loadingscreen/loadingscreen.component.html
@@ -3,7 +3,7 @@
         <div class="col-sm-12 my-auto text-center">
             <div class="h1">
                 <div class="spinner-border m-2" role="status" aria-hidden="true"></div>
-                <span class="font-weight-light">Wird geladen...</span>
+                <span class="font-weight-light" i18n>Wird geladen...</span>
             </div>
         </div>
     </div>
