--- a/power/src/app/fragebogen/dashboard/newform/newform.component.html
+++ b/power/src/app/fragebogen/dashboard/newform/newform.component.html
@@ -37,7 +37,7 @@
                     </div>
 
                     <!-- service -->
-                    <div class="form-group">
+                    <!--<div class="form-group">
                         <label for="formservice" i18n>Verknüpfter Dienst</label>
                         <select class="custom-select"
                             [(ngModel)]="service"
@@ -50,7 +50,7 @@
                                 {{ serv.name }}
                             </option>
                         </select>
-                    </div>
+                    </div>-->
 
                     <!-- template -->
                     <div class="form-group">
